user name in attendees table fix

--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -128,7 +128,7 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <td style="vertical-align:middle; color: gray">user name{{user.name}}</td>
+                                <td style="vertical-align:middle; color: gray">{{global.user.userFirstName}} {{global.user.userLastName}}</td>
                                 <td style="vertical-align:middle">
                                     <select data-ng-controller="VehiclesController" class="form-control glowing-border" ng-model="evVehicle">
                                         <option style="color: gray" value="">Select a vehicle</option>
