--- a/packages/custom/events/public/views/register.html
+++ b/packages/custom/events/public/views/register.html
@@ -1,43 +1,39 @@
-<!--<div ng-controller="ModalDemoCtrl">-->
-    <!--<script type="text/ng-template" id="myModalContent.html">-->
-        <div class="modal-header">
-            <h3 class="modal-title">Register for Event</h3>
-        </div>
-        <div class="modal-body">
-            <span us-spinner spinner-key="registration-spinner"></span>
-            <form name="registerForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(registerForm.$valid)" action="https://www.paypal.com/cgi-bin/webscr" method="post" novalidate>
-            <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.skill.$invalid }">
-                <label mean-token="'register-skill'" for="skillClass" class="col-md-3 control-label">Skill</label>
-                <div class="col-md-9">
-                    <select name="skillClass" data-ng-model="skillClass" id="skillClass" class="form-control" required>
-                        <option value="novice">Novice</option>
-                        <option value="intermediate">Intermediate</option>
-                        <option value="idvanced">Advanced</option>
-                    </select>
-                    <div data-ng-show="submitted && registerForm.skillClass.$invalid" class="help-block">
-                        <p data-ng-show="registerForm.skillClass.$error.required">Skill is required</p>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.vehicle.$invalid }">
-                <label mean-token="'register-vehicle'" for="vehicle" class="col-md-3 control-label">Vehicle</label>
-                <div class="col-md-9">
-                    <select name="vehicle" data-ng-model="vehicle" id="vehicle" class="form-control" required>
-                        <option value="Blue BMW 2008">Blue BMW 2008</option>
-                        <option value="Red BRZ 2014">Red BRZ 2014</option>
-                    </select>
-                    <div data-ng-show="submitted && registerForm.vehicle.$invalid" class="help-block">
-                        <p data-ng-show="registerForm.vehicle.$error.required">Vehicle is required</p>
-                    </div>
-                </div>
-            </div>
-                <input type="checkbox" data-ng-model="giveRideAlongs" name="giveRideAlongs" value="giveRideAlongs">Ride alongs welcome!<br>
-                <input type="checkbox" data-ng-model="requestRideAlongs" name="requestRideAlongs" value="requestRideAlongs">Request to ride along<br>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" data-ng-click="ok('paypal')"><img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="left" style="margin-right:7px;"></button>
-            <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
-        </div>
-    <!--</script>-->
-<!--</div>-->
+<div class="modal-header">
+   <h3 class="modal-title">Register for Event</h3>
+</div>
+<div class="modal-body">
+   <span us-spinner spinner-key="registration-spinner"></span>
+   <form name="registerForm" class="form-horizontal" role="form" data-ng-submit="create(registerForm.$valid)" action="https://www.paypal.com/cgi-bin/webscr" method="post" novalidate>
+       <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.skill.$invalid }">
+           <label mean-token="'register-skill'" for="skillClass" class="control-label">Skill</label>
+           <div>
+               <select name="skillClass" data-ng-model="skillClass" id="skillClass" class="form-control" required>
+                   <option value="novice">Novice</option>
+                   <option value="intermediate">Intermediate</option>
+                   <option value="idvanced">Advanced</option>
+               </select>
+               <div data-ng-show="submitted && registerForm.skillClass.$invalid" class="help-block">
+                   <p data-ng-show="registerForm.skillClass.$error.required">Skill is required</p>
+               </div>
+           </div>
+       </div>
+       <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.vehicle.$invalid }">
+           <label mean-token="'register-vehicle'" for="vehicle" class="control-label">Vehicle</label>
+           <div>
+               <select name="vehicle" data-ng-model="vehicle" id="vehicle" class="form-control" required>
+                   <option value="Blue BMW 2008">Blue BMW 2008</option>
+                   <option value="Red BRZ 2014">Red BRZ 2014</option>
+               </select>
+               <div data-ng-show="submitted && registerForm.vehicle.$invalid" class="help-block">
+                   <p data-ng-show="registerForm.vehicle.$error.required">Vehicle is required</p>
+               </div>
+           </div>
+       </div>
+       <input type="checkbox" data-ng-model="giveRideAlongs" name="giveRideAlongs" value="giveRideAlongs">Ride alongs welcome!<br>
+       <input type="checkbox" data-ng-model="requestRideAlongs" name="requestRideAlongs" value="requestRideAlongs">Request to ride along<br>
+    </form>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-primary" data-ng-click="ok('paypal')"><img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="left" style="margin-right:7px;"></button>
+    <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
+</div>
