linked navigation link to garage page and adjusted buttons and page title to be all lowercase

--- a/packages/custom/vehicles/public/views/create.html
+++ b/packages/custom/vehicles/public/views/create.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title" align="center">Add New Vehicle</h3>
+    <h3 class="modal-title" align="center">add new vehicle</h3>
 </div>
 <div class="modal-body">
     <form name="addForm" class="form-horizontal" role="form" data-ng-submit="create(addForm.$valid)" method="post" novalidate>
@@ -45,6 +45,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary btn-default" data-ng-click="add">Add</button>
-    <button class="btn btn-warning btn-default" data-ng-click="cancel()">Cancel</button>
+    <button class="btn btn-primary btn-default" data-ng-click="add">add</button>
+    <button class="btn btn-warning btn-default" data-ng-click="cancel()">aancel</button>
 </div>
