--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -46,7 +46,7 @@
                             </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="#">My Account</a></li>
-                                <li><a href="#">My Virtual Garage</a></li>
+                                <li><a ui-sref="garage page">My Virtual Garage</a></li>
                                 <li class="divider"></li>
                                 <li><a href="/logout">Log out</a></li>
                             </ul>
