--- a/packages/custom/vehicles/public/views/index.html
+++ b/packages/custom/vehicles/public/views/index.html
@@ -1,5 +1,5 @@
 <div>
-   <h2 class="page-title">Garage
+   <h2 class="page-title">garage
    <a data-ng-controller="ModalVehicleController" data-ng-click="open()">
         <i class="glyphicon glyphicon-plus-sign glyphlink-red"></i>
    </a>
