max height added for tracks table and centered login page with some styling

--- a/packages/custom/tracks/public/views/table.html
+++ b/packages/custom/tracks/public/views/table.html
@@ -11,14 +11,10 @@
     <div class="table-title">tracks <a ui-sref='create track'><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
   </div>
 
-  <table style="height: 400px;" class="table table-hover" fixed-header>
+  <table style="max-height: 400px;" class="table table-hover" fixed-header>
     <thead>
       <tr>
-        <th>Track</th>
-        <th>Location</th>
-        <th>Contact Name</th>
-        <th>Contact Email</th>
-        <th>Contact Phone</th>
+        <th>Track</th><th>Location</th><th>Contact Name</th><th>Contact Email</th><th>Contact Phone</th>
       </tr>
     </thead>
     <tbody>
