--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -1,16 +1,16 @@
 
 <div data-ng-controller="LoginCtrl">
   <div class="alert alert-danger animated fadeIn" ng-show="loginerror">{{loginerror}}</div>
-  <div class="container">
+  <div class="container" style="margin-left: -30px">
       <div class="omb_login">
 
           <div class="row omb_row-sm-offset-3 omb_login omb_socialButtons">
-              <div class="col-xs-4 col-sm-3">
+              <div class="col-sm-3">
                   <a href="/auth/facebook" class="btn btn-lg btn-block">
                       <img width="240px" src="/system/assets/img/fblogin.png">
                   </a>
               </div>
-              <div class="col-xs-4 col-sm-3">
+              <div class="col-sm-3">
                   <a href="/auth/google" class="btn btn-lg btn-block">
                       <img width="240px" src="/system/assets/img/g+login.png">
                   </a>
