sorting for upcoming events

--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -60,11 +60,11 @@
         </div>
 
         <div style="width: 50%" class="pull-left">
-            <div style="width: 70%; margin: 0 auto">
+            <div style="width: 80%; margin: 0 auto">
                 {{event.eventDesc}}
             </div>
 
-            <div style="width: 50%; min-width: 200px; margin: 0 auto" class="panel panel-default" data-ng-controller="EventsController" data-ng-init="find()">
+            <div style="width: 50%; min-width: 200px; margin: 30px auto" class="panel panel-default" data-ng-controller="EventsController" data-ng-init="find()">
                 <div class="panel-heading">
                     <div class="table-title">past events</div>
                 </div>
