--- a/packages/users/public/views/accounts.html
+++ b/packages/users/public/views/accounts.html
@@ -53,7 +53,7 @@
             <td style="vertical-align:middle">{{account.acctType}}</td>
             <td style="vertical-align:middle; text-align: center">{{account.status}}</td>
             <td style="vertical-align:middle">{{account.email}}</td>
-            <td style="vertical-align:middle">{{account.primaryPhoneNumber | '(###) ###-####'}}</td>
+            <td style="vertical-align:middle">{{account.primaryPhoneNumber}}</td>
         </tr>
         </tbody>
     </table>
