--- a/packages/custom/tracks/public/views/create.html
+++ b/packages/custom/tracks/public/views/create.html
@@ -1,32 +1,32 @@
 <section data-ng-controller="TracksController">
   <p class="page-title">create a new track</p>
 
-  <form style="float:none; left:25%" name="trackForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(trackForm.$valid)" novalidate>
+  <form name="trackForm" class="form-horizontal" role="form" data-ng-submit="create(trackForm.$valid)" novalidate>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && trackForm.trName.$invalid }">
-      <label class="col-md-3 control-label">Track Name</label>
-      <div class="col-md-4">
+      <label class="col-md-4 control-label">Track Name</label>
+      <div class="col-md-3">
         <input name="trName" data-ng-model="trName" placeholder="Track name" class="form-control glowing-border" required>
       </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && trackForm.trAddr.$invalid }">
-      <label class="col-md-3 control-label">Street Address</label>
-      <div class="col-md-9">
+      <label class="col-md-4 control-label">Street Address</label>
+      <div class="col-md-4">
         <input name="trAddr" data-ng-model="trAddr" placeholder="Street address" class="form-control glowing-border" required>
       </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && trackForm.trCity.$invalid }">
-      <label class="col-md-3 control-label">City</label>
-      <div class="col-md-5">
+      <label class="col-md-4 control-label">City</label>
+      <div class="col-md-3">
         <input name="trCity" data-ng-model="trCity" placeholder="City" class="form-control glowing-border" required>
       </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && trackForm.trState.value == null }">
-      <label class="col-md-3 control-label">State</label>
-      <div class="col-md-4">
+      <label class="col-md-4 control-label">State</label>
+      <div class="col-md-2">
         <select name="trState" class="form-control glowing-border" data-ng-model="trState" required>
           <option style="color:gray" value="">Select a state
           <option value="AL">Alabama
@@ -85,42 +85,43 @@
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && trackForm.trZip.$invalid }">
-      <label class="col-md-3 control-label">Zip</label>
-      <div class="col-md-3">
+      <label class="col-md-4 control-label">Zip</label>
+      <div class="col-md-2">
         <input name="trZip" data-ng-model="trZip" type="number" pattern="[0-9]*" max="99999" min="10000" placeholder="Zip" class="form-control glowing-border" required>
       </div>
     </div>
 
     <div class="form-group">
-      <label class="col-md-3 control-label">Contact Name</label>
-      <div class="col-md-6">
+      <label class="col-md-4 control-label">Contact Name</label>
+      <div class="col-md-3">
         <input name="contactName" data-ng-model="contactName" placeholder="(optional)" class="form-control glowing-border">
       </div>
     </div>
 
     <div class="form-group">
-      <label class="col-md-3 control-label">Contact Email</label>
-      <div class="col-md-7">
+      <label class="col-md-4 control-label">Contact Email</label>
+      <div class="col-md-3">
         <input name="contactEmail" type="email" data-ng-model="contactEmail" placeholder="(optional)" class="form-control glowing-border">
       </div>
     </div>
 
     <div class="form-group">
-      <label class="col-md-3 control-label">Contact Phone</label>
-      <div class="col-md-5">
+      <label class="col-md-4 control-label">Contact Phone</label>
+      <div class="col-md-3">
         <input name="contactPhone" type="tel" data-ng-model="contactPhone" placeholder="(optional)" class="form-control glowing-border">
       </div>
     </div>
 
     <div class="form-group">
-      <label class="col-md-3 control-label">Description</label>
-      <div class="col-md-9">
+      <label class="col-md-4 control-label">Description</label>
+      <div class="col-md-5">
         <textarea name="trDesc" data-ng-model="trDesc" class="form-control glowing-border" rows="4" placeholder="(optional)"></textarea>
       </div>
     </div>
 
     <div class="form-group">
-      <div class="col-md-offset-3 col-md-9">
+      <label class="col-md-4 control-label"> </label>
+      <div class="col-md-1">
         <button type="submit" class="btn btn-default">submit</button>
       </div>
     </div>
