registration page almost done, just need vehicle fields to go into database

--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -14,14 +14,14 @@
             <div>
                 <label class="col-md-4 control-label">First:</label>
                 <div class="col-md-2">
-                    <input class="form-control glowing-border" placeholder="First name" ng-model="userFirstName" required>
+                    <input class="form-control glowing-border" placeholder="First name" ng-model="userFirst" required>
                 </div>
             </div>
             <!-- Last Name -->
             <div>
                 <label class="col-md-1 control-label">Last:</label>
                 <div class="col-md-2">
-                    <input class="form-control glowing-border" placeholder="Last name" ng-model="userLastName" required>
+                    <input class="form-control glowing-border" placeholder="Last name" ng-model="userLast" required>
                 </div>
             </div>
         </div>
@@ -179,14 +179,14 @@
             <div>
                 <label class="col-md-4 control-label">First:</label>
                 <div class="col-md-2">
-                    <input class="form-control glowing-border" placeholder="First name" ng-model="emerFirstName" required>
+                    <input class="form-control glowing-border" placeholder="First name" ng-model="emerFirst" required>
                 </div>
             </div>
             <!-- Last Name -->
             <div>
                 <label class="col-md-1 control-label">Last:</label>
                 <div class="col-md-2">
-                    <input class="form-control glowing-border" placeholder="Last name" ng-model="emerLastName" required>
+                    <input class="form-control glowing-border" placeholder="Last name" ng-model="emerLast" required>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
             <div>
                 <label class="col-md-1 control-label">Year:</label>
                 <div class="col-md-2">
-                    <input type="number" min="1900" max="{{Date.getFullYear() + 1}}" class="form-control glowing-border" placeholder="Year" ng-model="vYear" required>
+                    <input type="number" min="1900" max="2015" class="form-control glowing-border" placeholder="Year" ng-model="vYear" required>
                 </div>
             </div>
             <!-- Make -->
