styling and touch ups

--- a/packages/custom/tracks/public/views/create.html
+++ b/packages/custom/tracks/public/views/create.html
@@ -28,7 +28,7 @@
       <label class="col-md-4 control-label">State</label>
       <div class="col-md-2">
         <select name="trState" class="form-control glowing-border" data-ng-model="trState" required>
-          <option style="color:gray" value="">Select a state
+          <option style="color:lightgray" value="">Select a state
           <option value="AL">Alabama
           <option value="AK">Alaska
           <option value="AZ">Arizona
