centered the section with styling and margins

--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -1,4 +1,4 @@
-<section class="container" data-ng-controller="RegisterCtrl">
+<section class="container" style="margin-left: -30px" data-ng-controller="RegisterCtrl">
     <div ng-repeat="error in registerError">
         <div class="alert alert-danger animated fadeIn">{{error.msg}}</div>
     </div>
