--- a/packages/users/public/views/accounts.html
+++ b/packages/users/public/views/accounts.html
@@ -1,4 +1,4 @@
-<div class="container" data-ng-controller="AccountsController">
+<div class="container" data-ng-controller="AccountsController" data-ng-init="find()">
     <div data-ng-include="'users/views/accts-table.html'"></div>
     <hr>
     <div data-ng-include="'users/views/acct-details.html'"></div>
