red border for image carousels

--- a/packages/custom/events/public/views/index.html
+++ b/packages/custom/events/public/views/index.html
@@ -2,7 +2,7 @@
   <div class="slides-control" style="margin: 40px auto">
     <carousel style="width:500px; height:300px" interval="myInterval">
       <slide style="width:500px; height:300px" ng-repeat="slide in slides" active="slide.active">
-        <img ng-src="{{slide.image}}"/>
+        <img style="border: 1px solid red" ng-src="{{slide.image}}"/>
       </slide>
     </carousel>
   </div>
