--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -45,10 +45,10 @@
 
     <div class="container" style="margin-top: 20px">
         <div ng-controller="CarouselCtrl" style="width:50%" class="pull-left">
-            <div class="slides-control" style="min-height: 300px; margin: 0 auto">
+            <div class="slides-control" style="min-height: 300px; margin: 0 auto;">
                 <carousel interval="myInterval">
                     <slide ng-repeat="slide in slides" active="slide.active">
-                        <img ng-src="{{slide.image}}"/>
+                        <img style="border: 1px solid red;" ng-src="{{slide.image}}"/>
                     </slide>
                 </carousel>
             </div>
