Updated event registration modal to get vehicle list for user. Changed confirmation modal so that when it is closed it modifies the current url to remove the parameter that triggers the modal

--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -1,4 +1,5 @@
 <section data-ng-controller="EventDetailsController">
+    <div data-ng-controller="ModalRegisteredController" data-ng-init="open()" />
     <div class="container">
         <div class="pull-right">
             <div style="padding: 3px">
