--- a/packages/custom/events/public/views/register.html
+++ b/packages/custom/events/public/views/register.html
@@ -19,12 +19,12 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.vehicle.$invalid }">
+            <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.vehicle.$invalid }" ng-init="getGarage()">
                 <label mean-token="'register-vehicle'" for="vehicle" class="col-md-3 control-label">Vehicle</label>
                 <div class="col-md-9">
                     <select name="vehicle" data-ng-model="vehicleId" id="vehicle" class="form-control" required>
                         <option value="">Pick a vehicle</option>
-                        <option ng-repeat="vehicle in vehicles" value="{{vehicle._id}}">{{vehicle.year}} {{vehicle.make}} {{vehicle.model}}</option>
+                        <option ng-repeat="vehicle in vehicles" value="{{vehicle._id}}">{{vehicle.vehicleYear}} {{vehicle.vehicleMake}} {{vehicle.vehicleModel}}</option>
                     </select>
                     <div data-ng-show="submitted && registerForm.vehicle.$invalid" class="help-block">
                         <p data-ng-show="registerForm.vehicle.$error.required">Vehicle is required</p>
