--- a/packages/users/public/views/acct-details.html
+++ b/packages/users/public/views/acct-details.html
@@ -3,24 +3,15 @@
         <div class="panel-heading table-title">
             account info
             <div class="panel-body panel-text">
-                <label style="width: 120px">First Name: </label> {{currAcct.userFirstName}}<br>
-                <label style="width: 120px">Last Name: </label> {{currAcct.userLastName}}<br>
-                <label style="width: 120px">Email: </label> {{currAcct.userEmail}}<br>
-                <label style="width: 120px">Phone: </label> {{currAcct.primaryPhoneNumber}}<br>
-                <label style="width: 120px">Birthday: </label> {{currAcct.birthday}}<br>
-                <label style="width: 120px">Street Address: </label> {{currAcct.streetAddress}}<br>
-                <label style="width: 120px">City: </label> {{currAcct.city}}<br>
-                <label style="width: 120px">State: </label> {{currAcct.state}}<br>
-                <label style="width: 120px">Zip: </label> {{currAcct.zip}}<br>
-                <label style="width: 120px">Skill Level: </label> {{currAcct.drivingLevel}}<br>
+                <label style="width: 120px">First Name: </label>{{currAcct.userFirstName}} {{currAcct.userLastName}}<br>
+                <label style="width: 120px">Email: </label>{{currAcct.userEmail}}<br><br>
+                <label style="width: 120px">Phone: </label>{{currAcct.primaryPhoneNumber}}<br>
+                <label style="width: 120px">Address: </label>{{currAcct.streetAddress}}<br>
+                <label style="width: 120px"> </label>{{currAcct.city}}, {{currAcct.state}} {{currAcct.zip}}<br><br>
+                <label style="width: 120px">Birthday: </label>{{currAcct.birthday | date: 'MM/dd/yyyy'}}<br>
+                <label style="width: 120px">Skill Level: </label>{{currAcct.drivingLevel}}<br>
             </div>
         </div>
-        <!--<div class="panel-heading table-title">
-            emergency contact
-            <div class="panel-body panel-text">
-                {{currAcct.trackDescription}}
-            </div>
-        </div>-->
     </div>
 
     <div class="pull-left">
@@ -43,6 +34,23 @@
             <button class="btn btn-primary btn-block btn-default">
                 delete account
             </button>
+        </div>
+    </div>
+
+    <div class="panel panel-default pull-left" style="margin: 0 10px auto; width: 280px;" >
+        <div class="panel-heading table-title">
+            account roles
+            <div ng-hide="editting" ng-click="editting=true" style="font-size: 12px" class="panel-text clickable-row pull-right"><span class="glyphicon glyphicon-edit"></span> edit</div>
+            <div ng-show="editting" ng-click="editting=false" style="font-size: 12px" class="panel-text clickable-row pull-right"><span class="glyphicon glyphicon-floppy-saved"></span> save</div>
+            <div class="panel-body panel-text">
+                <div ng-hide="editting" ng-repeat="role in currAcct.roles">
+                    <label style="width: 200px">{{role}}</label>
+                </div>
+                <div ng-show="editting" ng-repeat="possRole in possibleRoles">
+                    <label style="width: 200px">{{possRole}}</label>
+                    <input type="checkbox" value="member" ng-model="currAcct.roles.member">
+                </div>
+            </div>
         </div>
     </div>
 </div>
