created the about page and took centering out of h1, h2, and h3 styling since there is a class for centering.

--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <div style="margin-left: 60px">
+        <div style="margin-left: 60px" class="text-center">
             <h1>{{event.trackId.trackName}}</h1>
             <h2>{{event.eventStartDate | date : "MM/dd/yyyy"}}</h2>
             <h3>{{event.trackId.trackAddress}}</h3>
